# sinvestir-simulateur-crypto

./: .gitignore  CLAUDE.md  README.md  vercel.json
api/: index.py  pyproject.toml  requirements.txt
api/app/: __init__.py  coins.py  config.py  deps.py  main.py  simulate.py
api/engine/: __init__.py  backtest.py  schedule.py
api/prices/: __init__.py  base.py  csv.py  yahoo.py
api/tests/: test_backtest.py  test_coins.py  test_golden.py  test_health.py  test_prices.py  test_schedule.py  test_simulate.py
api/tests/fixtures/: README.md  xrp_eur_daily.csv
docs/: ARCHITECTURE.md  DESIGN.md  TODO.md
web/: next.config.ts  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/embed/: page.tsx
web/src/components/simulator/: ChartPanel.tsx  CoinCombobox.tsx  ComingSoonButton.tsx  CryptoSimulator.tsx  Disclaimer.tsx  EvolutionChart.tsx  KpiCard.tsx  ParametersPanel.tsx  ResultsPanel.tsx  fields.tsx
web/src/lib/: api.ts  config.ts  format.ts  params.ts  types.ts
